Sétimo dia: deploy final do projeto

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/isadelmatos/popular-movies.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Isabela de Matos Calixto",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/isadelmatos/popular-movies/issues"
